# apps/api/services/identity/src/com/qode/qrew/v1/identity/schemas/passkey.py
@@ -68,3 +68,4 @@ class PasskeyAssertBeginResponse(BaseModel):
 
 class PasskeyAssertCompleteResponse(BaseModel):
     asserted_at: datetime
+    access_token: str
